--- a/content/themes/mytheme/default.hbs
+++ b/content/themes/mytheme/default.hbs
@@ -17,7 +17,7 @@
      {{! Styles and Scripts }}
     <link rel="stylesheet" type="text/css" href="/assets/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
-    <link href='http://fonts.googleapis.com/css?family=Istok+Web:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,800' rel='stylesheet' type='text/css'>
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 </head>
