--- a/content/themes/mytheme/index.hbs
+++ b/content/themes/mytheme/index.hbs
@@ -9,7 +9,7 @@
     {{#foreach posts}}
 
     <article class="{{post_class}}">
-        <header class="post-header">         
+        <header class="mytheme_post_header">         
             <h2 class="mytheme_post_title"><a href="{{url}}">{{{title}}}</a></h2>
             {{#if tags}}on {{tags}}{{/if}}</span>
         </header>
@@ -17,7 +17,7 @@
             {{content words="100"}}
         </section>
         <footer class="mytheme_post_info">
-        	<span class="mytheme_date"><time datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMM YYYY"}}</time></span>
+        	<span class="mytheme_date"><time datetime="{{date format='DD-MMM-YYYY'}}">{{date format="DD MMM YYYY"}}</time></span>
         	<div class="button">
         		<a href="{{url}}">{{{title}}}</a>
         	</div>
